changed preload links to lower lcp

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -6,16 +6,15 @@
     <title>Genny Allison | Front-End Developer & AI Content Specialist | Tech Trends Project</title>
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-       
-    <!--Mobile (≤480px) -->
+
+    <!-- Mobile (≤480px) -->
     <link 
       rel="preload" 
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_262,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)" 
-      fetchpr
-    iority="high"
+      fetchpriority="high" 
     />
 
     <!-- Tablet (481px–1199px) -->
