added size to preload links

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -15,6 +15,7 @@
       type="image/avif" 
       media="(max-width: 480px)" 
       fetchpriority="high" 
+      sizes="100vw"
     />
 
     <!-- Tablet (481px–1199px) -->
@@ -24,6 +25,7 @@
       as="image" 
       type="image/avif" 
       media="(min-width: 481px) and (max-width: 1199px)" 
+      sizes="100vw"
     />
 
     <!-- Desktop (≥1200px) -->
@@ -33,6 +35,7 @@
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
+      sizes="100vw"
     />
 
     <link 
