made more changes to hero image picture tag and preload links to lower lcp

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,25 +13,21 @@
       href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_262,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
       as="image" 
       type="image/avif" 
-      media="(max-width: 480px)" 
-      fetchpriority="high" 
+      media="(max-width: 480px)"  
       sizes="100vw"
     />
 
     <!-- Tablet (481px–1199px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,h_432,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
-      as="image" 
-      type="image/avif" 
-      media="(min-width: 481px) and (max-width: 1199px)" 
-      sizes="100vw"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
+      as="image" type="image/avif" media="(max-width: 480px)" sizes="100vw"
     />
 
     <!-- Desktop (≥1200px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1200,h_670,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
@@ -121,25 +117,26 @@
       <div class="canvas-skills-img">
         <picture>
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1200,h_670,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
             type="image/avif"
             media="(min-width: 1200px)"
             sizes="100vw"
+            fetchpriority="high"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,h_432,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
             type="image/avif"
             media="(min-width: 481px) and (max-width: 1199px)"
             sizes="100vw"
           />
           <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_262,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
             width="468"
             height="262"
             loading="eager"
             fetchpriority="high"
-            style="aspect-ratio: 1.786 / 1; object-fit: cover; width: 100%; height: auto;"
+            style=" object-fit: cover;"
             decoding="async"
           />
         </picture>
