--- a/pages/project1.html
+++ b/pages/project1.html
@@ -10,7 +10,7 @@
     <!-- Mobile (≤480px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_468,h_262,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747352313/girlCoding-mobile_v3iwqz.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"  
@@ -20,14 +20,14 @@
     <!-- Tablet (481px–1199px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
       as="image" type="image/avif" media="(max-width: 480px)" sizes="100vw"
     />
 
     <!-- Desktop (≥1200px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      href=https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
@@ -117,26 +117,26 @@
       <div class="canvas-skills-img">
         <picture>
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif 100"
             type="image/avif"
             media="(min-width: 1200px)"
             sizes="100vw"
             fetchpriority="high"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
             type="image/avif"
             media="(min-width: 481px) and (max-width: 1199px)"
             sizes="100vw"
           />
           <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill,g_auto,dpr_auto,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747352313/girlCoding-mobile_v3iwqz.avif"
             alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-            width="468"
-            height="262"
+            width="474"
+            height="280"
             loading="eager"
             fetchpriority="high"
-            style=" object-fit: cover;"
+            style="object-fit: cover;"
             decoding="async"
           />
         </picture>
