--- a/pages/project1.html
+++ b/pages/project1.html
@@ -27,7 +27,7 @@
     <!-- Desktop (≥1200px) -->
     <link 
       rel="preload" 
-      href=https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
@@ -117,7 +117,7 @@
       <div class="canvas-skills-img">
         <picture>
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif 100"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
             type="image/avif"
             media="(min-width: 1200px)"
             sizes="100vw"
