--- a/pages/project1.html
+++ b/pages/project1.html
@@ -14,14 +14,13 @@
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)"  
-      sizes="100vw"
     />
 
     <!-- Tablet (481px–1199px) -->
     <link 
       rel="preload" 
       href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
-      as="image" type="image/avif" media="(max-width: 480px)" sizes="100vw"
+      as="image" type="image/avif" media="(max-width: 480px)"
     />
 
     <!-- Desktop (≥1200px) -->
@@ -31,7 +30,6 @@
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
-      sizes="100vw"
     />
 
     <link 
