changed images to see if the second image is the true lcp, testing

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -10,7 +10,7 @@
     <!-- Mobile (max-width: 480px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_468,h_262,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
+      href="/img/welcome_to_tech_trends_mobile.avif" 
       as="image" 
       type="image/avif" 
       media="(max-width: 480px)" 
@@ -20,7 +20,7 @@
     <!-- Tablet (481px–1199px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 481px) and (max-width: 1199px)" 
@@ -29,7 +29,7 @@
     <!-- Desktop (≥1200px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      href="hhttps://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
@@ -136,8 +136,8 @@
             width="468"
             height="262"
             style="object-fit: cover;"
-            loading="eager"
-            fetchpriority="high"
+            loading="lazy"
+            fetchpriority="auto"
             decoding="async"
           />
         </picture>
