--- a/pages/project1.html
+++ b/pages/project1.html
@@ -29,7 +29,7 @@
     <!-- Desktop (≥1200px) -->
     <link 
       rel="preload" 
-      href="hhttps://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       as="image" 
       type="image/avif" 
       media="(min-width: 1200px)" 
