--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,15 +7,25 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <!-- Mobile (max-width: 480px) -->
+        <!-- Preload second image (LCP on desktop ≥941px) -->
     <link 
       rel="preload" 
       href="/img/welcome_to_tech_trends_mobile.avif" 
       as="image" 
       type="image/avif" 
-      media="(max-width: 480px)" 
       fetchpriority="high"
-    />
+      media="(min-width: 941px)"
+    >
+
+    <!-- Preload first image (LCP on mobile ≤940px) -->
+    <link 
+      rel="preload" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_360,h_202,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
+      as="image" 
+      type="image/avif" 
+      fetchpriority="high"
+      media="(max-width: 940px)"
+    >
 
     <!-- Tablet (481px–1199px) -->
     <link 
@@ -136,7 +146,7 @@
             width="468"
             height="262"
             style="object-fit: cover;"
-            loading="lazy"
+            loading="eager"
             fetchpriority="auto"
             decoding="async"
           />
@@ -185,7 +195,7 @@
                           width="377" 
                           height="192" 
                           style="aspect-ratio: 1.957 / 1;  object-fit: cover; width: 100%; height: auto;" 
-                          loading="lazy"
+                          loading="eager"
                           fetchpriority="auto"
                           decoding="async"
                         />
