updated picture tag and preload links to work favorably for presenting the first image as lcp only for smaller screens

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -20,7 +20,7 @@
     <!-- Preload first image (LCP on mobile ≤940px) -->
     <link 
       rel="preload" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_360,h_202,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_360,h_202,c_fill/v1714816017/girlCoding_xd9edr.avif"
       as="image" 
       type="image/avif" 
       fetchpriority="high"
@@ -140,16 +140,16 @@
             media="(min-width: 481px) and (max-width: 1199px)"
             sizes="100vw"
           />
-          <img 
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_360,h_202,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif"
-            alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
+          <img
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_360,h_202,c_fill/v1714816017/girlCoding_xd9edr.avif"
+            alt="A woman coding on a laptop, symbolizing the integration of creativity and technology"
             width="468"
             height="262"
-            style="object-fit: cover;"
             loading="eager"
-            fetchpriority="auto"
+            fetchpriority="high"
             decoding="async"
-          />
+            style="object-fit: cover; aspect-ratio: 16/9;"
+          >
         </picture>
       </div>
       <div class="canvas-skills-title">
