--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,56 +7,41 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <!-- Girl Coding Image - Mobile (≤ 480px) -->
+    <!-- LCP image for screens ≤ 940px (mobile) -->
     <link 
       rel="preload" 
       as="image" 
       href="/img/girlCoding-mobile.avif"
-      type="image/avif"
-      media="(max-width: 480px)" 
+      media="(max-width: 940px)"
       fetchpriority="high"
     />
 
-    <!-- Girl Coding Image - Tablet (481px–1199px) -->
+    <!-- LCP image for screens ≥ 941px (tablet + desktop) -->
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" 
-      type="image/avif"
-      media="(min-width: 481px) and (max-width: 1199px)" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy/v1747014135/girlCoding-tablet_uund2i.avif"
+      media="(min-width: 941px) and (max-width: 1199px)"
       fetchpriority="high"
     />
 
-    <!-- Girl Coding Image - Desktop (≥ 1200px) -->
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       type="image/avif"
       media="(min-width: 1200px)" 
       fetchpriority="high"
     />
 
-    <!-- Welcome to Tech Trends - Desktop (≥ 1200px) -->
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_1200,h_670,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
-      type="image/avif"
-      media="(min-width: 1200px)" 
-      fetchpriority="high"
-    />
-
-    <!-- Welcome to Tech Trends - Tablet (941px–1199px) -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_768,h_432,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
       type="image/avif"
       media="(min-width: 941px) and (max-width: 1199px)" 
       fetchpriority="high"
     />
-
 
     <link 
       rel="preload" 
@@ -139,7 +124,7 @@
     </section>  
     <div class="canvas-skills-grid">
       <div class="canvas-skills-img">
-        <!-- MOBILE IMAGE (used ≤940px) -->
+        <!-- Image used ONLY on screens ≤ 940px -->
         <img 
           src="/img/girlCoding-mobile.avif"
           width="468"
@@ -152,15 +137,15 @@
           style="object-fit: cover; aspect-ratio: 1.786 / 1;"
         />
 
-        <!-- DESKTOP IMAGE (picture tag for >940px) -->
+        <!-- Responsive image for screens ≥ 941px -->
         <picture class="not-mobile">
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,fl_lossy/v1747014137/girlCoding-desktop_qjepoe.avif"
             media="(min-width: 1200px)"
             type="image/avif"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy/v1747014135/girlCoding-tablet_uund2i.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
@@ -170,6 +155,7 @@
             width="468"
             height="262"
             loading="eager"
+            fetchpriority="high"
             decoding="async"
             style="object-fit: cover; aspect-ratio: 1.786 / 1;"
           />
@@ -181,6 +167,7 @@
         <h2>showcasing the craft</h2>
       </div>
     </div>
+
     <main class="about-me" id="projects">
         <!--resume-->        
       <div class="black-container">
@@ -201,13 +188,13 @@
                     <div class="site-hero-img">
                       <picture>
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
                         />
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
                           type="image/avif"
                           media="(min-width: 481px) and (max-width: 1199px)"
                           sizes="100vw"
@@ -215,12 +202,11 @@
                         <img 
                           src="/img/welcome_to_tech_trends_mobile.avif"
                           alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
-                          type="image/avif"
                           width="377" 
                           height="192" 
                           style="aspect-ratio: 1.957 / 1;  object-fit: cover; width: 100%; height: auto;" 
                           loading="eager"
-                          fetchpriority="auto"
+                          fetchpriority="high"
                           decoding="async"
                         />
                       </picture>
