--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,41 +7,55 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <!-- LCP image for screens ≤ 940px (mobile) -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="/img/girlCoding-mobile.avif"
-      media="(max-width: 940px)"
-      fetchpriority="high"
-    />
+      <!-- Mobile LCP image preload (≤ 940px) -->
+      <link 
+        rel="preload" 
+        as="image" 
+        href="/img/girlCoding-mobile.avif"
+        type="image/avif"
+        media="(max-width: 940px)"
+        fetchpriority="high"
+      />
 
-    <!-- LCP image for screens ≥ 941px (tablet + desktop) -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy/v1747014135/girlCoding-tablet_uund2i.avif"
-      media="(min-width: 941px) and (max-width: 1199px)"
-      fetchpriority="high"
-    />
+      <!-- Tablet LCP image preload (941px–1199px) -->
+      <link 
+        rel="preload" 
+        as="image" 
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy/v1747014135/girlCoding-tablet_uund2i.avif"
+        type="image/avif"
+        media="(min-width: 941px) and (max-width: 1199px)"
+        fetchpriority="high"
+      />
 
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
-      type="image/avif"
-      media="(min-width: 1200px)" 
-      fetchpriority="high"
-    />
+      <!-- Desktop LCP image preload (≥ 1200px) -->
+      <link 
+        rel="preload" 
+        as="image" 
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,fl_lossy/v1747014137/girlCoding-desktop_qjepoe.avif"
+        type="image/avif"
+        media="(min-width: 1200px)"
+        fetchpriority="high"
+      />
 
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
-      type="image/avif"
-      media="(min-width: 941px) and (max-width: 1199px)" 
-      fetchpriority="high"
-    />
+      <!-- Hero section preload (same logic applies here) -->
+      <link 
+        rel="preload" 
+        as="image" 
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
+        type="image/avif"
+        media="(min-width: 481px) and (max-width: 1199px)" 
+        fetchpriority="high"
+      />
+
+      <link 
+        rel="preload" 
+        as="image" 
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+        type="image/avif"
+        media="(min-width: 1200px)" 
+        fetchpriority="high"
+      />
+
 
     <link 
       rel="preload" 
@@ -133,7 +147,6 @@
         <img 
           src="/img/girlCoding-mobile.avif"
           alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-          class="only-mobile"
           width="468" 
           height="262"
           loading="eager"
