updated preload links with cloudinary attributes

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -21,7 +21,7 @@
       <link 
         rel="preload" 
         as="image" 
-        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy/v1747014135/girlCoding-tablet_uund2i.avif"
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_768,h_432,f_avif,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"
         type="image/avif"
         media="(min-width: 941px) and (max-width: 1199px)"
         fetchpriority="high"
@@ -31,7 +31,7 @@
       <link 
         rel="preload" 
         as="image" 
-        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,fl_lossy/v1747014137/girlCoding-desktop_qjepoe.avif"
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
         type="image/avif"
         media="(min-width: 1200px)"
         fetchpriority="high"
@@ -41,7 +41,7 @@
       <link 
         rel="preload" 
         as="image" 
-        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" 
         type="image/avif"
         media="(min-width: 481px) and (max-width: 1199px)" 
         fetchpriority="high"
@@ -50,12 +50,11 @@
       <link 
         rel="preload" 
         as="image" 
-        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+        href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
         type="image/avif"
         media="(min-width: 1200px)" 
         fetchpriority="high"
       />
-
 
     <link 
       rel="preload" 
@@ -160,12 +159,12 @@
         <!-- Responsive image for screens ≥ 941px -->
         <picture class="not-mobile">
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_1200,h_670,fl_lossy/v1747014137/girlCoding-desktop_qjepoe.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_1200,h_670,f_avif,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014137/girlCoding-desktop_qjepoe.avif"
             media="(min-width: 1200px)"
             type="image/avif"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_80,w_768,h_432,fl_lossy/v1747014135/girlCoding-tablet_uund2i.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_768,h_432,f_avif,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747014135/girlCoding-tablet_uund2i.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
@@ -208,13 +207,13 @@
                     <div class="site-hero-img">
                       <picture>
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
                           type="image/avif"
                           media="(min-width: 1200px)"
                           sizes="100vw"
                         />
                         <source
-                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
                           type="image/avif"
                           media="(min-width: 481px) and (max-width: 1199px)"
                           sizes="100vw"
