added mobile preload link for welcome to tech trends

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -56,6 +56,16 @@
         fetchpriority="high"
       />
 
+      <link 
+        rel="preload" 
+        as="image" 
+        href="/img/welcome_to_tech_trends_mobile.avif"
+        type="image/avif"
+        media="(max-width: 480px)"
+        fetchpriority="high"  
+      />
+
+
     <link 
       rel="preload" 
       href="/assets/fonts/georgia.woff2"
