removed girlcoding img and replaced it with the welcome to tech trends

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
           </div>
         </div> 
       </section>
-      <section class="about--me-container">
+      <section class="about-me-container">
         <!--ABOUT ME-->
           <div class="greetings-label">
             <h2>about me</h2>
