--- a/pages/project3.html
+++ b/pages/project3.html
@@ -120,8 +120,8 @@
                     alt="Sports Tube Community hero image, showcasing a comic retro style design for a sports content platform"
                     width="500"
                     height="410"
-                    loading="lazy"
-                    fetchpriority="low"
+                    loading="eager"
+                    fetchpriority="high"
                     style="object-fit: cover;aspect-ratio: 500 / 410;"
                     decoding="async" 
                   >
