--- a/pages/project2.html
+++ b/pages/project2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title><title>Genny Allison | Front-End Developer & AI Content Specialist | Sports Tube Project</title>
-</title>
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
@@ -924,8 +924,8 @@
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="#description">introduction</a></li>
-        <li><a href="#grade">the grade</a></li>
-        <li><a href="#design">the design</a></li>
+        <li><a href="#the-grade">the grade</a></li>
+        <li><a href="#the-design">the design</a></li>
         <li><a href="#wireframe">the wireframe</a></li>
         <li><a href="#casestudy">the case study</a></li>
         <li><a href="#contact">the contact me</a></li>
