--- a/pages/project5.html
+++ b/pages/project5.html
@@ -351,11 +351,11 @@
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="#description">introduction</a></li>
-        <li><a href="#grade">the grade</a></li>
-        <li><a href="#design">the design</a></li>
+        <li><a href="#the-grade">the grade</a></li>
+        <li><a href="#the-design">the design</a></li>
         <li><a href="#wireframe">the wireframe</a></li>
         <li><a href="#casestudy">the case study</a></li>
-        <li><a href="#cta-creator">the contact me</a></li>
+        <li><a href="#contact">the contact me</a></li>
       </ul>
       <button id="back-to-top" class="hidden">back to top</button>
     </div>
