updated preload links

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,35 +7,36 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-      <!-- Mobile LCP image preload (≤ 940px) -->
-      <link 
-        rel="preload" 
-        as="image" 
-        href="/img/welcome_to_tech_trends_mobile.avif"
-        type="image/avif"
-        media="(max-width: 940px)"
-        fetchpriority="high"
-      />
+    <!-- Mobile (default img src) – ≤ 940px -->
+    <link 
+      rel="preload" 
+      as="image" 
+      href="/img/welcome_to_tech_trends_mobile.avif" 
+      type="image/avif" 
+      media="(max-width: 940px)" 
+      fetchpriority="high"
+    />
 
-      <!-- Tablet LCP image preload (941px–1199px) -->
-      <link 
-        rel="preload" 
-        as="image" 
-        href="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_768,h_432,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
-        type="image/avif"
-        media="(min-width: 941px) and (max-width: 1199px)"
-        fetchpriority="high"
-      />
+    <!-- Tablet – 941px to 1199px -->
+    <link 
+      rel="preload" 
+      as="image" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_768,h_432,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      type="image/avif" 
+      media="(min-width: 941px) and (max-width: 1199px)" 
+      fetchpriority="high"
+    />
 
-      <!-- Desktop LCP image preload (≥ 1200px) -->
-      <link 
-        rel="preload" 
-        as="image" 
-        href="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_1200,h_670,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
-        type="image/avif"
-        media="(min-width: 1200px)"
-        fetchpriority="high"
-      />
+    <!-- Desktop – ≥ 1200px -->
+    <link 
+      rel="preload" 
+      as="image" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_1200,h_670,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      type="image/avif" 
+      media="(min-width: 1200px)" 
+      fetchpriority="high"
+    />
+
 
     <link 
       rel="preload" 
