updated preload links

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -21,7 +21,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_768,h_432,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       type="image/avif" 
       media="(min-width: 941px) and (max-width: 1199px)" 
       fetchpriority="high"
@@ -31,7 +31,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_1200,h_670,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       type="image/avif" 
       media="(min-width: 1200px)" 
       fetchpriority="high"
@@ -127,12 +127,12 @@
         <!-- Responsive image for screens ≥ 941px -->
         <picture>
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_1200,h_670,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
             media="(min-width: 1200px)"
             type="image/avif"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/q_80,w_768,h_432,f_avif,q_auto,w_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
             media="(min-width: 941px)"
             type="image/avif"
           />
