updted aspect ratio

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -13,7 +13,7 @@
       as="image" 
       href="/img/welcome_to_tech_trends_mobile.avif" 
       type="image/avif" 
-      media="(max-width: 940px)" 
+      media="(max-width: 680px)" 
       fetchpriority="high"
     />
 
@@ -21,9 +21,9 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif" 
       type="image/avif" 
-      media="(min-width: 941px) and (max-width: 1199px)" 
+      media="(min-width: 681px) and (max-width: 1199px)"
       fetchpriority="high"
     />
 
@@ -128,12 +128,14 @@
         <picture>
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
-            media="(min-width: 1200px)"
             type="image/avif"
+            media="(min-width: 1200px)"
+            sizes="100vw"
+            fetchpriority="high"
           />
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
-            media="(min-width: 941px)"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            media="(min-width: 681px) and (max-width: 1199px)"
             type="image/avif"
           />
           <img 
