updated styles links on footer and nav

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -5,7 +5,14 @@
     <title>Genny Allison</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="preload" href="/styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+
+    <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
+
+    <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
     <script src="/designer.js"></script>
   
   </head>
