--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,33 +7,33 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <!-- Mobile (default img src) – ≤ 940px -->
+    <!-- Desktop Hero Image Preload (≥ 941px) -->
+    <link 
+      rel="preload" 
+      as="image" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      type="image/avif" 
+      media="(min-width: 941px)" 
+      fetchpriority="high"
+    />
+
+    <!-- Tablet Hero Image Preload (681px–940px) -->
+    <link 
+      rel="preload" 
+      as="image" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif" 
+      type="image/avif" 
+      media="(min-width: 681px) and (max-width: 940px)" 
+      fetchpriority="high"
+    />
+
+    <!-- Mobile Hero Image Preload (< 681px) -->
     <link 
       rel="preload" 
       as="image" 
       href="/img/welcome_to_tech_trends_mobile.avif" 
       type="image/avif" 
       media="(max-width: 680px)" 
-      fetchpriority="high"
-    />
-
-    <!-- Tablet – 941px to 1199px -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif" 
-      type="image/avif" 
-      media="(min-width: 681px) and (max-width: 1199px)"
-      fetchpriority="high"
-    />
-
-    <!-- Desktop – ≥ 1200px -->
-    <link 
-      rel="preload" 
-      as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
-      type="image/avif" 
-      media="(min-width: 1200px)" 
       fetchpriority="high"
     />
 
@@ -126,29 +126,35 @@
       <div class="canvas-skills-img">
         <!-- Responsive image for screens ≥ 941px -->
         <picture>
+          <!-- Desktop (≥ 941px) -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
             type="image/avif"
-            media="(min-width: 1200px)"
+            media="(min-width: 941px)"
             sizes="100vw"
             fetchpriority="high"
           />
+
+          <!-- Tablet (681px–940px) -->
           <source
             srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
-            media="(min-width: 681px) and (max-width: 1199px)"
             type="image/avif"
+            media="(min-width: 681px)"
           />
-          <img 
+
+          <!-- Mobile fallback -->
+          <img
             src="/img/welcome_to_tech_trends_mobile.avif"
-            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
             width="480"
             height="295"
-            loading="eager"
+            alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals..."
+            style="object-fit: cover; width: 100%; height: auto;"
             fetchpriority="high"
             decoding="async"
-            style="object-fit: cover; aspect-ratio: 63 / 124;"
+            loading="eager"
           />
         </picture>
+
       </div>
 
       <div class="canvas-skills-title">
