adjusted font heights, image heights for mobile

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -132,10 +132,10 @@
           <!-- Mobile fallback -->
           <img
             src="/img/welcome_to_tech_trends_mobile.avif"
-            width="656"
-            height="335"
+            width="480"
+            height="284"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals..."
-            style="object-fit: cover; width: 100%; height: auto;"
+            style="object-fit: cover; width: 100%; height: auto; aspect-ratio: 480 / 284"
             fetchpriority="high"
             decoding="async"
             loading="eager"
